# diesel-streamer

./: .env.sample  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: ci.yml
diesel-streamer/: Cargo.toml
diesel-streamer-tests/: Cargo.toml
diesel-streamer-tests/src/: counter.rs  db.rs  factory.rs  lib.rs  main.rs  migrations.rs  test_runner.rs
diesel-streamer-tests/src/tests/: mod.rs  serial_table.rs
diesel-streamer/src/: get_serial_table_async_stream.rs  lib.rs  serial_table.rs  stream_serial_table.rs
diesel_streamer/: Cargo.toml
diesel_streamer/src/: serial_table.rs
diesel_streamer_benchmarks/: Cargo.toml  README.md
diesel_streamer_benchmarks/src/: benchmarkable.rs  db.rs  lib.rs  main.rs  serial_table.rs
diesel_streamer_benchmarks/src/benchmarks/: mod.rs
diesel_streamer_tests/: Cargo.toml
diesel_streamer_tests/src/: counter.rs  db.rs  factory.rs  lib.rs  migrations.rs  serial_table.rs
diesel_streamer_tests/src/tests/: serial_table.rs
