[package]
name = "diesel-streamer"
version = "0.1.0"
authors = ["Joshua Oladele <jurshsmith@gmail.com>"]
categories = ["streaming", "lazy loading", "diesel", "database", "postgres", "mysql", "sqlite"]
description = "Utilities for streaming large tables with Diesel ORM"
documentation = "https://docs.rs/diesel-streamer"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["streaming", "serial", "cursor-based", "bigserial", "database streaming", "large tables"]
repository = "https://github.com/jurshsmith/diesel-streamer"
rust-version = "1.56"

[features]
default = ["sync"]
sync = []
async = []

[dependencies]
diesel = "2" 

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]