[package]
name = "diesel-streamer"
version = "0.1.2"
authors = ["Joshua Oladele <jurshsmith@gmail.com>"]
categories = ["database", "database-implementations"]
description = "A tiny diesel add-on for streaming large tables"
documentation = "https://github.com/jurshsmith/diesel-streamer#readme"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["streaming", "cursor-based", "bigserial", "database"]
repository = "https://github.com/jurshsmith/diesel-streamer"
readme="../README.md"
rust-version = "1.56"

[features]
default = ["sync"]
sync = []
async = []

[dependencies]
diesel = "2" 

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]