[package]
name = "diesel-streamer"
version = "0.1.11"
authors = ["Joshua Oladele <jurshsmith@gmail.com>"]
categories = ["database", "database-implementations"]
description = "A tiny diesel add-on for streaming large tables"
documentation = "https://github.com/jurshsmith/diesel-streamer#readme"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["streaming", "cursor-based", "bigserial", "database"]
repository = "https://github.com/jurshsmith/diesel-streamer"
readme="../README.md"
rust-version = "1.56.1"

[features]
sync = []
async = []

[dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]