[package]
name = "diesel_streamer_benchmarks"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4" }
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
diesel_streamer = { path = "../diesel_streamer" }
dotenvy = "0.15"
sysinfo = "0.29.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "diesel_streamer_benchmark"
path = "src/main.rs"
bench = true
harness = false